Fix header align

--- a/src/layout/header/header.scss
+++ b/src/layout/header/header.scss
@@ -12,7 +12,7 @@
         margin-bottom: 50px;
         margin-left: -30px;
         margin-right: -30px;
-        .head-logo, .head-content {
+        .head-logo, .header-content {
             display: flex;
             align-items: center;
         }
